# TMDT

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  agent_credentials.txt  build_and_push.sh  code.html  dev-backend.sh  docker-compose.dev.yml  docker-compose.staging.yml  docker-compose.yml  run_update.py  run_upload.py  skills-lock.json  test.py  upload_test_data.py
bk-cacao/: .env  .env.test  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  seed_db.py  tagger.py  test.db  test_main.py
bk-cacao/app/: agent.py  database.py  embeddings.py  gql_types.py  models.py  mutations.py  query_catalog.py  query_recommend.py  query_search.py  recommendation.py  schema.py  scoring.py  vector_store.py
bk-cacao/app/routes/: tagging.py
bk-cacao/tools/: backfill_profiles.py
bk-tmdt/: .env.sample  .gitignore  AgentBackend.md  Dockerfile  README.md  alembic.ini  fix_alembic.py  main.py  pyproject.toml  requirements.txt  seed.py
bk-tmdt/alembic/: env.py
bk-tmdt/alembic/versions/: 0001_initial_schema.py  00d94a6bb187_add_shortlink_updated_at.py  07cd2fc205f7_add_product_tags_and_file_fields.py  1c54c4a94abb_add_product_likes_table.py  5e1a6a53d895_add_user_follows_table.py  70286db064c5_add_profile_fields_to_users.py  9f9cc77a8a40_them_tinh_nang_vi_noi_bo_va_paymentlog.py  ab378f7aa622_add_wallet_to_payment_method_enum.py  c69eecacc997_update_withdrawal.py  c7fdceef47c2_add_verification_fields_to_users.py  dd81cb8657a0_add_shortlink_and_is_gold_to_users.py  e74d1d668bc0_add_vnpay_to_payment_method_enum.py  ead95d96ab21_make_product_category_id_nullable.py
bk-tmdt/app/: main.py
bk-tmdt/app/agent/: __init__.py  context.py  schema.py  types.py
bk-tmdt/app/api/: dependencies.py
bk-tmdt/app/core/: config.py  security.py
bk-tmdt/app/crud/: admin.py  analytics.py  cart.py  categories.py  comments.py  orders.py  payments.py  products.py  reviews.py  (+2 more)
bk-tmdt/tests/: conftest.py  test_graphql_admin.py  test_sprint3.py  test_sprint4.py  test_wallet.py
bk-tmdt/tools/: reset_user.py
(+221 files in other folders)
