[project]
name = "bk-cacao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "langchain>=1.3.4",
    "langchain-community>=0.4.2",
    "langchain-huggingface>=1.2.2",
    "langchain-ollama>=1.1.0",
    "onnxruntime>=1.27.0",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "sqlalchemy>=2.0.50",
    "strawberry-graphql[fastapi]>=0.316.0",
    "uvicorn>=0.49.0",
]
