[project]
name = "bk-tmdt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.13.0",
    "email-validator>=2.2.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "passlib[bcrypt]>=1.7.4",
    "pgvector>=0.4.2",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.0",
    "pytest>=9.0.0",
    "python-dotenv>=1.0.1",
    "python-jose[cryptography]>=3.3.0",
    "SQLAlchemy>=2.0.30",
    "strawberry-graphql[fastapi]>=0.273.0",
    "uvicorn[standard]>=0.30.0",
]
